--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,7 +8,7 @@
             "hostName": "localhost",
             "port": 5005,
             "preLaunchTask": "gradleRunDebug",
-            "postDebugTask": "killGradleProcess",
+            "postDebugTask": "killGradleProcess"
         },
         {
             "type": "java",
@@ -17,7 +17,7 @@
             "hostName": "localhost",
             "port": 5005,
             "preLaunchTask": "gradleRunDebugCLI",
-            "postDebugTask": "killGradleProcess",
+            "postDebugTask": "killGradleProcess"
         }
     ]
 }
